--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>KotlinLine</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" style="font-family: 'Open Sans', sans-serif;"></div>
     <script src="KotlinLine.js"></script>
 </body>
 </html>
