Updated pages design

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>KotlinLine</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/5434d58d99.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
 <body>
     <div id="root" style=""></div>
@@ -26,11 +26,12 @@
     body {
         flex: 1;
         margin: 0;
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Noto Sans JP', sans-serif;
     }
 
     #root {
         display: flex;
+        flex-direction: column;
         height: 100%;
     }
 </style>
