Move current project to "frontend" module

--- a/frontend/src/main/resources/index.html
+++ b/frontend/src/main/resources/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="root" style=""></div>
-    <script src="KotlinLine.js"></script>
+    <script src="frontend.js"></script>
 </body>
 </html>
 
