Implemented results table logic, designed select

--- a/frontend/src/main/resources/index.html
+++ b/frontend/src/main/resources/index.html
@@ -34,4 +34,10 @@
         flex-direction: column;
         height: 100%;
     }
+
+    select {
+        appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+    }
 </style>
